clusters/moo-cluster/ingress-nginx/socryx-topled/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socryx-topled
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: moo.nerdland.local
