clusters/moo-cluster/ingress-nginx/socryx-topled/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socryx-topled
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: argocd.example.com
    http:
      paths:
      - backend:
          service:
            name: socryx-topled.arvo.network
            port:
              number: 443
